# conduit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pr-checks.yml
adk_agents/conduit_app/: agent.py
client/think_client/: README.md  pubspec.yaml
client/think_client/lib/: conduit_api.dart  main.dart  models.dart  settings_store.dart
client/think_client/test/: conduit_api_test.dart  (+1 more)
config/: models.yaml  recipes.yaml  repos.yaml  scheduled_sessions.yaml  tools.yaml
docker/: codex-wrapper.sh
docs/: codex-tool.md  google-workspace-tools.md
flutter/: README.md
flutter/lib/: conduit_api.dart  connection_diagnostics.dart  context_estimate.dart  main.dart  models.dart  settings_store.dart
flutter/test/: chat_context_estimate_test.dart  connection_diagnostics_test.dart  models_test.dart  scheduled_sessions_test.dart
src/conduit/: __init__.py  agent.py  anthropic_extended_thinking.py  config.py  context_estimate.py  main.py  model_registry.py  recipe_catalog.py  repos.py  runtime.py  scheduled_sessions.py  schemas.py  session_metadata.py  tool_call_utils.py  tool_permissions.py  user_context.py  websocket_chat.py
tests/: conftest.py  test_agent.py  test_anthropic_extended_thinking.py  test_api.py  test_bash.py  test_context_estimate.py  test_google_workspace.py  test_polymarket.py  test_recipe_lookup.py  test_scheduled_sessions.py  test_sqlite_session_service.py  test_tool_permissions.py  test_web_fetch.py  test_web_search.py  test_websocket_chat.py
(+14 files in other folders)
